<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dollosojap.androidtrainingapp.RegisterActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp">

        <TextView
            android:text="@string/registerText"
            android:textStyle="bold"
            android:textColor="#555"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_below="@+id/header">

        <EditText android:id="@+id/text_fullname"
            android:background="@drawable/inputrounded"
            android:hint="Full Name"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />
        <EditText android:id="@+id/text_email"
            android:background="@drawable/inputrounded"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="#555"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupGender"
            android:layout_marginBottom="20dp">
            <RadioButton android:id="@+id/btn_male"
                android:text="@string/male"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:layout_height="wrap_content"
                android:layout_gravity="left" />
            <RadioButton android:id="@+id/btn_female"
                android:text="@string/female"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />
        </RadioGroup>
        <TextView
            android:text="@string/passwordText"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <EditText android:id="@+id/text_password"
            android:background="@drawable/inputrounded"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/confirmPasswordText"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <EditText android:id="@+id/text_confirmPassword"
            android:background="@drawable/inputrounded"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <Button android:id="@+id/btn_register"
            android:background="@drawable/registerin"
            android:text="@string/registerText"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="SuccessRegister"/>

    </LinearLayout>
</RelativeLayout>
